--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <a href="/">
                 <div class="headerLogo">
                     <h1 class="headerLogoTitle">EVENTOS</h1>
+                    <h2 class="headerLogoSubTitle">Loly's Party</h2>  
                 </div>
             </a>
         </header>
 
-        <nav class="navbar navbar-expand-sm menu">
+        <nav class="navbar sticky-top navbar-expand-sm menu">
             <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,10 +48,14 @@
                             </a>
                             <!--data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="pages/services.html#sectionCattering">Cattering</a></li>
-                                <li><a class="dropdown-item" href="pages/services.html#sectionBodasg">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos Infantes</a>
+                                </li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionCorporative">Eventos
+                                        Corporativos</a></li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionCattering">Cattering</a>
+                                </li>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionBodasg">Casamientos</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item ">
@@ -72,68 +77,16 @@
 
         <!--contenido principal-->
         <main class="mainInit">
-
-            <!--<div class="mainInitVideo" id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100 imagencita" src="img/background3.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100 imagencita" src="img/background2.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100 imagencita" src="img/fiesta1.jpg" alt="Third slide">
-                    </div>
-                </div>
-            </div> -->
             <main class="mainInitVideo">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block  itemImageInicio">
-                      <div class="carousel-caption d-md-block itemInfoInicio">
-                        <p>No sabes donde y cuando</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block  itemImageInicio" alt="">
-                      <div class="carousel-caption d-md-block itemInfoInicio">
-                        <p>No sabes donde y cuando</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block itemImageInicio" alt="">
-                      <div class="carousel-caption d-md-block itemInfoInicio">
-                        <p>No sabes donde y cuando</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="3000">
-                        <img src="img/background3.png" class="d-block itemImageInicio"alt="" >
-                      <div class="carousel-caption d-md-block itemInfoInicio">
-                        <p>No sabes donde y cuando</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </main>
-          
-            
-            <div class="mainInitP">
-                <p>Si estás planeando una fiesta y/o evento hacia tu
-                    fiesta, y todavía no definiste nada, te
-                    acompañamos para encontrar todo lo necesario!
-                </p>
-                <p>Necesitas un servicio de catering a medida??
-                    Tenemos la solución!!
-                </p>
-            </div>
-
+                <p class="mainInitP">EVENTOS</p>
+                <p class="mainInitP">Loly's Party</p>
+            </main>
         </main>
 
         <!-- #region footer-->
-        <footer class="footerInit">
+        <footer class="footerInit sticky-bottom">
             <div class="footerIcons">
-                <a href="../pages/contacto.html" target="_blank">
+                <a href="pages/contacto.html" target="_blank">
                     <img src="img/icoEmail.svg" alt="Correo" width="24" height="24">
                 </a>
                 <a href="https://es-la.facebook.com/" target="_blank">
