--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -29,7 +29,7 @@
         </header>
 
         <!--Menu-->
-        <nav class="navbar navbar-expand-sm menu">
+        <nav class="navbar sticky-top navbar-expand-sm menu">
             <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -79,21 +79,15 @@
             </div>
             <h2 class="mainAboutUsH2">Conoce nuestra empresa</h2>
             <p class="mainAboutUsP">
-                Somos un grupo especial de personas que se abocan a resolver problemas
-                asociados al indole de eventos.
-                Conformados hace menos de un año, buscamos el expertise en cada aspecto, y 
-                lograr brindar a la mejor experiencia
-                Cuidamos hasta el último detalle
-                
-Convertimos tu 
-visión en realidad
-
-Hacemos realidad cualquier sueño
+                Somos una empresa familiar dedicada a brindar
+                servicios para reuniones, agasajos, fiestas, cumpleaños, bautismos,
+                comuniones y otros eventos.
+                Para celebrar con tus seres queridos aquellos momemntos inolvidables
             </p>
         </main>
 
         <!-- #region footer-->
-        <footer class="footerInit">
+        <footer class="footerInit sticky-bottom">
             <div class="footerIcons">
                 <a href="../pages/contacto.html" target="_blank">
                     <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
