--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -25,7 +25,7 @@
                 </div>
             </a>
         </header>
-        <nav class="navbar navbar-expand-sm menu">
+        <nav class="navbar sticky-top navbar-expand-sm menu">
             <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -98,7 +98,7 @@
         </main>
 
         <!-- #region footer-->
-        <footer class="footerInit">
+        <footer class="footerInit sticky-bottom">
             <div class="footerIcons">
                 <a href="../pages/contacto.html" target="_blank">
                     <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
