--- a/pages/services.html
+++ b/pages/services.html
@@ -25,8 +25,8 @@
                     <h1 class="headerLogoTitle">EVENTOS</h1>
                 </div>
             </a>
-        </header><!--sticky-top-->
-        <nav class="navbar   navbar-expand-sm menu">
+        </header>
+        <nav class="navbar sticky-top navbar-expand-sm menu">
             <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -118,7 +118,10 @@
             </section>
             <section id="sectionCorporative" class="sectionClass">
                 <h2>Eventos Corporativos</h2>
-                <p>Lorem</p>
+                <p>Ofrecemos multiples opciones de eventos empresariales, congresos, seminarios, lanzamientos
+                    de productos, desfiles, cocktails, lunchs, almuerzos, cenas formales, jornadas laborales, coffee 
+                    desayuno de trabajo, entre otros
+                </p>
             </section>
             <section id="sectionCattering" class="sectionClass">
                 <h2>Cattering</h2>
@@ -126,13 +129,18 @@
             </section>
             <section id="sectionBodas" class="sectionClass">
                 <h2>Bodas</h2>
-                <p>Lorem</p>
+                <p>Nos encargamos de guiarlos desde el principio en toda la organizacion
+                    y desarrollo de su casamiento para que salga perfecto e inolvidable.
+                    Con multiplicidad de opciones de entretenimiento tal como carnaval carioca,
+                    costumbre puramente argentina con gorros, anteojos, papel picado y lo que se 
+                    te ocurra.
+                </p>
             </section>
         </main>
 
 
         <!-- #region footerfixed-bottom-->
-        <footer class="footerInit">
+        <footer class="footerInit sticky-bottom">
             <div class="footerIcons">
                 <a href="../pages/contacto.html" target="_blank">
                     <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
