--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -82,7 +82,7 @@
                 Somos una empresa familiar dedicada a brindar
                 servicios para reuniones, agasajos, fiestas, cumpleaños, bautismos,
                 comuniones y otros eventos.
-                Para celebrar con tus seres queridos aquellos momemntos inolvidables
+                Para celebrar con tus seres queridos aquellos momemtos inolvidables
             </p>
         </main>
 
