--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <header class="headerInit">
             <a href="/">
                 <div class="headerLogo">
-                    <h1 class="headerLogoTitle">EVENTOS</h1>
-                    <h2 class="headerLogoSubTitle">Loly's Party</h2>  
+                    <h1 class="headerLogoTitle">Loly's Party</h1> 
+                    <h2 class="headerLogoSubTitle">EVENTOS</h2> 
                 </div>
             </a>
         </header>
