--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,11 +19,11 @@
 
 <body>
     <div class="containerPrincipal">
-        <!--Menu-->
         <header class="headerInit">
             <a href="/">
                 <div class="headerLogo">
-                    <h1 class="headerLogoTitle">EVENTOS</h1>
+                    <h1 class="headerLogoTitle">Loly's Party</h1> 
+                    <h2 class="headerLogoSubTitle">EVENTOS</h2> 
                 </div>
             </a>
         </header>
