--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -20,11 +20,12 @@
   <div class="containerPrincipal">
     <header class="headerInit">
       <a href="/">
-        <div class="headerLogo">
-          <h1 class="headerLogoTitle">EVENTOS</h1>
-        </div>
+          <div class="headerLogo">
+              <h1 class="headerLogoTitle">Loly's Party</h1> 
+              <h2 class="headerLogoSubTitle">EVENTOS</h2> 
+          </div>
       </a>
-    </header>
+  </header>
 
     <nav class="navbar sticky-top navbar-expand-sm menu">
       <div class="container">
