--- a/pages/services.html
+++ b/pages/services.html
@@ -22,10 +22,12 @@
         <header class="headerInit">
             <a href="/">
                 <div class="headerLogo">
-                    <h1 class="headerLogoTitle">EVENTOS</h1>
+                    <h1 class="headerLogoTitle">Loly's Party</h1>
+                    <h2 class="headerLogoSubTitle">EVENTOS</h2>
                 </div>
             </a>
         </header>
+
         <nav class="navbar sticky-top navbar-expand-sm menu">
             <div class="container">
                 <a class="navbar-brand" href="#"></a>
@@ -73,69 +75,61 @@
 
 
         <main class="mainServices">
-            <section class="serviceSelection">
-                <div class="eventCard eventKids">
+                <div id="sectionKids"  class="eventCard eventKids">
                     <div class="eventImage"></div>
                     <a href="#sectionKids">
                         <div class="eventImage--hover"></div>
                     </a>
                     <div clase="eventInfo">
                         <h3 class="eventName">Eventos Infantiles</h3>
+                        <p>Ofrecemos multiples opciones de eventos empresariales, congresos, seminarios, lanzamientos
+                            de productos, desfiles, cocktails, lunchs, almuerzos, cenas formales, jornadas laborales, coffee
+                            desayuno de trabajo, entre otros
+                        </p>
                     </div>
                 </div>
-                <div class="eventCard eventCorporative ">
+                <div id="sectionCorporative" class="eventCard eventCorporative ">
                     <div class="eventImage"></div>
                     <a href="#sectionCorporative">
                         <div class="eventImage--hover"></div>
                     </a>
                     <div clase="eventInfo">
                         <h3 class="eventName">Eventos Corporativos</h3>
+                        <p>Ofrecemos multiples opciones de eventos empresariales, congresos, seminarios, lanzamientos
+                            de productos, desfiles, cocktails, lunchs, almuerzos, cenas formales, jornadas laborales, coffee
+                            desayuno de trabajo, entre otros
+                        </p>
                     </div>
                 </div>
-                <div class="eventCard eventCattering">
+                <div id="sectionCattering" class="eventCard eventCattering">
                     <div class="eventImage"></div>
                     <a href="#sectionCattering">
                         <div class="eventImage--hover"></div>
                     </a>
                     <div clase="eventInfo">
                         <h3 class="eventName">Cattering</h3>
+                        <p>Pensamos el catering como un momento especial. Una combinacion entre la más
+                            alta cocina y un ambiente cálido, donde la vanguardia es el componente princpal.
+                            Contamos con un servicio de comidas y bebidas con propuestas que se amoldan
+                            a tus posibilidades.
+                        </p>
                     </div>
                 </div>
-                <div class="eventCard eventBodas">
+                <div id="sectionBodas" class="eventCard eventBodas">
                     <div class="eventImage"></div>
                     <a href="#sectionBodas">
                         <div class="eventImage--hover"></div>
                     </a>
                     <div clase="eventInfo">
                         <h3 class="eventName">Bodas</h3>
+                        <p>Nos encargamos de guiarlos desde el principio en toda la organizacion
+                            y desarrollo de su casamiento para que salga perfecto e inolvidable.
+                            Con multiplicidad de opciones de entretenimiento tal como carnaval carioca,
+                            costumbre puramente argentina con gorros, anteojos, papel picado y lo que se
+                            te ocurra.
+                        </p>
                     </div>
                 </div>
-            </section>
-
-            <section id="sectionKids" class="sectionClass">
-                <h2>Eventos Infantiles</h2>
-                <p>Lorem</p>
-            </section>
-            <section id="sectionCorporative" class="sectionClass">
-                <h2>Eventos Corporativos</h2>
-                <p>Ofrecemos multiples opciones de eventos empresariales, congresos, seminarios, lanzamientos
-                    de productos, desfiles, cocktails, lunchs, almuerzos, cenas formales, jornadas laborales, coffee 
-                    desayuno de trabajo, entre otros
-                </p>
-            </section>
-            <section id="sectionCattering" class="sectionClass">
-                <h2>Cattering</h2>
-                <p>Lorem</p>
-            </section>
-            <section id="sectionBodas" class="sectionClass">
-                <h2>Bodas</h2>
-                <p>Nos encargamos de guiarlos desde el principio en toda la organizacion
-                    y desarrollo de su casamiento para que salga perfecto e inolvidable.
-                    Con multiplicidad de opciones de entretenimiento tal como carnaval carioca,
-                    costumbre puramente argentina con gorros, anteojos, papel picado y lo que se 
-                    te ocurra.
-                </p>
-            </section>
         </main>
 
 
