--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -23,7 +23,8 @@
         <header class="headerInit">
             <a href="/">
                 <div class="headerLogo">
-                    <h1 class="headerLogoTitle">EVENTOS</h1>
+                    <h1 class="headerLogoTitle">Loly's Party</h1> 
+                    <h2 class="headerLogoSubTitle">EVENTOS</h2> 
                 </div>
             </a>
         </header>
