--- a/pages/services.html
+++ b/pages/services.html
@@ -82,9 +82,9 @@
                     </a>
                     <div clase="eventInfo">
                         <h3 class="eventName">Eventos Infantiles</h3>
-                        <p>Ofrecemos multiples opciones de eventos empresariales, congresos, seminarios, lanzamientos
-                            de productos, desfiles, cocktails, lunchs, almuerzos, cenas formales, jornadas laborales, coffee
-                            desayuno de trabajo, entre otros
+                        <p>Ofrecemos animaciones tradicionales y animaciones temáticas.
+                            Entre otros servicios contamos con un equipo de animadores capacitados 
+                            para que todos pasen una tarde  increible y divertida.
                         </p>
                     </div>
                 </div>
