--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -44,9 +44,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown" role="button"
                 aria-expanded="false">Servicios</a>
-              <!---data-bs-toggle="dropdown"-->
               <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
+                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantiles</a></li>
                 <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a>
                 </li>
                 <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
@@ -172,20 +171,20 @@
         <p class="itemInfo">Evento Kids 2022 Marzo</p>
       </div>
       <div class="item5">
-        <img class="itemImage" src="../img/fiesta1.jpg" alt="Evento Kids 2020-Mayo">
-        <p class="itemInfo">Evento Kids 2020 Mayo</p>
+        <img class="itemImage" src="../img/fiesta5.jpg" alt="Evento Corporativo 2021-Diciembre">
+        <p class="itemInfo">Evento Corporativo 2021-Diciembre</p>
       </div>
       <div class="item6">
-        <img class="itemImage" src="../img/fiesta2.jpeg" alt="Evento Corporativo 2021-Julio">
-        <p class="itemInfo">Evento Corporativo 2021 Julio</p>
+        <img class="itemImage" src="../img/fiesta6.jpg" alt="Evento Boda 2022-Enero">
+        <p class="itemInfo">Evento Boda 2022-Enero</p>
       </div>
       <div class="item7">
-        <img class="itemImage" src="../img/fiesta3.jpg" alt="Evento Cattering 2021-Octubre">
-        <p class="itemInfo">Evento Cattering 2021 Octubre</p>
+        <img class="itemImage" src="../img/fiesta7.jpg" alt="Evento Boda 2020-Septiembre">
+        <p class="itemInfo">Evento Boda 2020-Septiembre</p>
       </div>
       <div class="item8">
-        <img class="itemImage" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
-        <p class="itemInfo">Evento Kids 2022 Marzo</p>
+        <img class="itemImage" src="../img/fiesta8.jpg" alt="Evento Catering 2021-Agosto">
+        <p class="itemInfo">Evento Catering 2021-Agosto</p>
       </div>
 
     </main>
