--- a/pages/services.html
+++ b/pages/services.html
@@ -48,9 +48,8 @@
                                 aria-expanded="false">
                                 Servicios
                             </a>
-                            <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="#sectionKids">Eventos Infantiles</a></li>
                                 <li><a class="dropdown-item" href="#sectionCorporative">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="#sectionCattering">Cattering</a></li>
                                 <li><a class="dropdown-item" href="#sectionBodas">Casamientos</a></li>
@@ -132,8 +131,6 @@
                 </div>
         </main>
 
-
-        <!-- #region footerfixed-bottom-->
         <footer class="footerInit sticky-bottom">
             <div class="footerIcons">
                 <a href="../pages/contacto.html" target="_blank">
