--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </a>
                             <!--data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos Infantes</a>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos Infantiles</a>
                                 </li>
                                 <li><a class="dropdown-item" href="pages/services.html#sectionCorporative">Eventos
                                         Corporativos</a></li>
