--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -50,9 +50,8 @@
                                 role="button" aria-expanded="false">
                                 Servicios
                             </a>
-                            <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantiles</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionBodas">Casamientos</a></li>
