--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -47,9 +47,8 @@
                                 role="button" aria-expanded="false">
                                 Servicios
                             </a>
-                            <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantiles</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html#sectionBodas">Casamientos</a></li>
@@ -82,7 +81,7 @@
                 </p>
                 <li>Usuario 2</li>
                 <p>
-                    "Muy buen servicio, les encanto a los chicos"
+                    "Servicio Satisfactorio"
                 </p>
                 <li>Usuario 3</li>
                 <p>
