--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -116,27 +116,27 @@
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="../img/fiesta1.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Kids 2020-Mayo">
+            <img src="../img/fiesta5.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Diciembre">
             <div class="carousel-caption d-md-block itemInfoCarousel">
-              <p>Evento Kids 2020-Mayo</p>
+              <p>Evento Corporativo 2021-Diciembreo</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="../img/fiesta2.jpeg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Julio">
+            <img src="../img/fiesta6.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Boda 2022-Enero">
             <div class="carousel-caption d-md-block itemInfoCarousel">
-              <p>Evento Corporativo 2021-Julio</p>
+              <p>Evento Boda 2022-Enero</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="../img/fiesta3.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Cattering 2021-Octubre">
+            <img src="../img/fiesta7.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Boda 2020-Septiembre">
             <div class="carousel-caption d-md-block itemInfoCarousel">
-              <p>Evento Cattering 2021-Octubre</p>
+              <p>Evento Boda 2020-Septiembre</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="../img/fiesta4.webp" class="d-block w-100 itemImageCarousel" alt="Evento Kids 2022-Marzo">
+            <img src="../img/fiesta8.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Catering 2021-Agosto">
             <div class="carousel-caption d-md-block itemInfoCarousel">
-              <p>Evento Kids 2022-Marzo</p>
+              <p>Evento Catering 2021-Agosto</p>
             </div>
           </div>
         </div>
