--- a/pages/services.html
+++ b/pages/services.html
@@ -120,7 +120,7 @@
                         <div class="eventImage--hover"></div>
                     </a>
                     <div clase="eventInfo">
-                        <h3 class="eventName">Bodas</h3>
+                        <h3 class="eventName">Casamientos</h3>
                         <p>Nos encargamos de guiarlos desde el principio en toda la organizacion
                             y desarrollo de su casamiento para que salga perfecto e inolvidable.
                             Con multiplicidad de opciones de entretenimiento tal como carnaval carioca,
