--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <header class="headerInit">
             <a href="/">
                 <div class="headerLogo">
-                    <h1 class="headerLogoTitle">Loly's Party</h1> 
-                    <h2 class="headerLogoSubTitle">EVENTOS</h2> 
+                    <h1 class="headerLogoTitle">Loly's Party</h1>
+                    <h2 class="headerLogoSubTitle">EVENTOS</h2>
                 </div>
             </a>
         </header>
@@ -48,7 +48,8 @@
                             </a>
                             <!--data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos Infantiles</a>
+                                <li><a class="dropdown-item" href="pages/services.html#sectionKids">Eventos
+                                        Infantiles</a>
                                 </li>
                                 <li><a class="dropdown-item" href="pages/services.html#sectionCorporative">Eventos
                                         Corporativos</a></li>
