--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -20,12 +20,12 @@
   <div class="containerPrincipal">
     <header class="headerInit">
       <a href="/">
-          <div class="headerLogo">
-              <h1 class="headerLogoTitle">Loly's Party</h1> 
-              <h2 class="headerLogoSubTitle">EVENTOS</h2> 
-          </div>
+        <div class="headerLogo">
+          <h1 class="headerLogoTitle">Loly's Party</h1>
+          <h2 class="headerLogoSubTitle">EVENTOS</h2>
+        </div>
       </a>
-  </header>
+    </header>
 
     <nav class="navbar sticky-top navbar-expand-sm menu">
       <div class="container">
@@ -116,7 +116,8 @@
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="../img/fiesta5.jpg" class="d-block w-100 itemImageCarousel" alt="Evento Corporativo 2021-Diciembre">
+            <img src="../img/fiesta5.jpg" class="d-block w-100 itemImageCarousel"
+              alt="Evento Corporativo 2021-Diciembre">
             <div class="carousel-caption d-md-block itemInfoCarousel">
               <p>Evento Corporativo 2021-Diciembreo</p>
             </div>
