--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -23,8 +23,8 @@
         <header class="headerInit">
             <a href="/">
                 <div class="headerLogo">
-                    <h1 class="headerLogoTitle">Loly's Party</h1> 
-                    <h2 class="headerLogoSubTitle">EVENTOS</h2> 
+                    <h1 class="headerLogoTitle">Loly's Party</h1>
+                    <h2 class="headerLogoSubTitle">EVENTOS</h2>
                 </div>
             </a>
         </header>
@@ -51,10 +51,14 @@
                                 Servicios
                             </a>
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos Infantiles</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionCattering">Cattering</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodas">Casamientos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionKids">Eventos
+                                        Infantiles</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionCorporative">Eventos
+                                        Corporativos</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../pages/services.html#sectionCattering">Cattering</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html#sectionBodas">Casamientos</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
