--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -100,19 +100,18 @@
                 </div>
             </div>
             <div class="infoFormulario">
-                <h2 class="titleFormulario">¿Querés mas informacion?</h2>
+                <h1 class="titleFormulario">¿Querés mas informacion?</h1>
                 <form class="formulario">
                     <fieldset>
                         <legend>Envio tus datos</legend>
                         <div class="mb-3">
-                            <label for="Nombre">Nombre y Apellido
-                                <input class="form-control form-control-lg  " type="text" name="nombre"
-                                    placeholder="Nombre y apellido">
+                            <label for="Nombre">Nombre y Apellido</label>
+                            <input class="form-control form-control-lg  " type="text" name="nombre"
+                                placeholder="Nombre y apellido">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email:</label>
-                            <input class="form-control form-control-lg" type="email" class="form-control"
-                                id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <label for="email" class="form-label">Email:</label>
+                            <input class="form-control form-control-lg" type="email" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
                             <label for="Telefono">Telefono de contacto:
@@ -121,10 +120,9 @@
                                 placeholder="Ingresa un teléfono">
                         </div>
                         <div class="mb-3">
-                            <label for="Consulta">Consulta:
-                                <textarea class="form-control form-control-lg"
-                                    placeholder="Ingrese su consulta"></textarea>
-                            </label>
+                            <label for="Consulta">Consulta:</label>
+                            <textarea class="form-control form-control-lg" placeholder="Ingrese su consulta"></textarea>
+
                         </div>
                         <div class="mb-3">
                             <input class="botonForm" type="submit" value="Enviar">
